Changed Servlet 3.0 dependency to Servlet 2.5 (and EL 2.1, part of JSP 2.1) dependency. Fixed FullAjaxExceptionHandler code accordingly for that. Fixed of:formatDate() to set default locale from faces context. Clarified some javadocs.

--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src" />
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="owner.project.facets" value="java" />
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javaee-web-api-6.0.jar">
+	<classpathentry kind="lib" path="lib/jsf-api-2.0.0.jar">
 		<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value="" />
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="build/classes" />
+	<classpathentry kind="lib" path="lib/jsp-api-2.1.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
