Initial commit for faces-view feature (auto-scanning view pages in dedicated folder, plus extensionless URLs). Moved API back to Java EE 6 (should be optional compile time dependency only).

--- a/.classpath
+++ b/.classpath
@@ -6,20 +6,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/jsf-api-2.0.0.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/servlet-api-2.5.jar">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="lib/el-api-2.2.1-b04.jar">
-	<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/javaee-web-api-6.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
