--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src" />
+	
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="owner.project.facets" value="java" />
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="lib/javaee-web-api-6.0.jar"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="lib" path="lib/javaee-web-api-6.0.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.nondependency" value="" />
+		</attributes>
+	</classpathentry>
+	
+	<classpathentry kind="output" path="build/classes" />
 </classpath>
