--- a/build.xml
+++ b/build.xml
@@ -7,37 +7,53 @@
 -->
 <project name="OmniFaces" default="all" basedir=".">
 
-    <path id="common.classpath">
-        <fileset dir="lib">
-            <include name="**/*.jar" />
-        </fileset>
-    </path>
+	<property name="VERSION" value="1.0" />
+	<tstamp>
+		<format property="TODAY" pattern="yyyy-MM-dd HH:mm:ss" />
+	</tstamp>
 
-    <target name="clean">
-        <delete dir="build" />
-        <delete dir="dist" />
-    </target>
+	<path id="common.classpath">
+		<fileset dir="lib">
+			<include name="**/*.jar" />
+		</fileset>
+	</path>
 
-    <target name="compile">
-        <mkdir dir="build/classes" />
-        <javac srcdir="src" destdir="build/classes" includeantruntime="false" source="1.6" target="1.6" debug="true">
-            <classpath refid="common.classpath" />        	
-        </javac>
-        <copy todir="build/classes">
-        	<fileset dir="src" excludes="**/*.java" />
-        </copy>
-    </target>
+	<target name="clean">
+		<delete dir="build" />
+		<delete dir="dist" />
+	</target>
 
-    <target name="jar" depends="compile">
-        <mkdir dir="dist" />
-        <jar destfile="dist/omnifaces.jar" basedir="build/classes"/>
-    </target>
+	<target name="compile">
+		<mkdir dir="build/classes" />
+		<javac srcdir="src" destdir="build/classes" includeantruntime="false" source="1.6" target="1.6" debug="true">
+			<classpath refid="common.classpath" />
+		</javac>
+		<copy todir="build/classes">
+			<fileset dir="src" excludes="**/*.java" />
+		</copy>
+	</target>
 
-    <target name="jar-src">
-        <mkdir dir="dist" />
-        <jar destfile="dist/omnifaces-src.jar" basedir="src"/>
-    </target>
+	<target name="jar" depends="compile">
+		<mkdir dir="dist" />
+		<jar destfile="dist/omnifaces-${VERSION}.jar" basedir="build/classes">
+			<manifest>
+				<attribute name="Specification-Title" value="OmniFaces" />
+				<attribute name="Specification-Vendor" value="OmniFaces" />
+				<attribute name="Specification-Version" value="${VERSION}" />
+				<attribute name="Implementation-Vendor" value="OmniFaces" />
+				<attribute name="Implementation-Title" value="OmniFaces" />
+				<attribute name="Implementation-Version" value="${VERSION}" />
+				<attribute name="Implementation-URL" value="http://omnifaces.org" />
+				<attribute name="Built-Date" value="${TODAY}" />
+			</manifest>
+		</jar>
+	</target>
 
-    <target name="dist" depends="jar,jar-src" />
-    <target name="all" depends="clean,dist" />
+	<target name="jar-src">
+		<mkdir dir="dist" />
+		<jar destfile="dist/omnifaces-${VERSION}-src.jar" basedir="src" />
+	</target>
+
+	<target name="dist" depends="jar,jar-src" />
+	<target name="all" depends="clean,dist" />
 </project>
