--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src" />
-	
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
-			<attribute name="owner.project.facets" value="java" />
+			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/javaee-web-api-6.0.jar">
 		<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value="" />
+			<attribute name="javadoc_location" value="http://docs.oracle.com/javaee/6/api/"/>
+			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
-	
-	<classpathentry kind="output" path="build/classes" />
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
