--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	
 	<!-- Properties -->
 	
-	<property name="version" value="1.1" />
+	<property name="version" value="1.2-SNAPSHOT" />
 	<property name="artifactId" value="omnifaces" />
 
 	<tstamp>
@@ -23,7 +23,7 @@
 	<condition property="VERSION" value="${version}">
 		<isset property="maven" />
 	</condition>
-	<property name="VERSION" value="${version}" />
+	<property name="VERSION" value="${version}-${DATE_SHORT}" />
 
 	<path id="common.classpath">
 		<fileset dir="lib">
@@ -31,7 +31,9 @@
 		</fileset>
 	</path>
 	
-	<!-- define artifacts' name, which follows the convention of Maven -->
+	
+	
+	<!-- Define artifacts' name, which follows the convention of Maven -->
 	
 	<property name="implementation-jar" value="dist/${artifactId}-${VERSION}.jar" />
 	<property name="sources-jar" value="dist/${artifactId}-${VERSION}-src.jar" />
