--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	
 	<!-- Properties -->
 	
-	<property name="version" value="1.2" />
+	<property name="version" value="1.3-SNAPSHOT" />
 	<property name="artifactId" value="omnifaces" />
 
 	<tstamp>
@@ -20,7 +20,7 @@
 		<format property="TODAY" pattern="yyyy-MM-dd HH:mm:ss" />
 	</tstamp>
 
-	<condition property="VERSION" value="${version}">
+	<condition property="VERSION" value="${version}-${DATE_SHORT}">
 		<isset property="maven" />
 	</condition>
 	<property name="VERSION" value="${version}" />
