--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>omnifaces</artifactId>
 	<packaging>jar</packaging>
 	<name>Omnifaces</name>
-	<version>1.2</version>
+	<version>1.3-SNAPSHOT</version>
 	<description>JSF 2.x utility library</description>
 	<url>http://code.google.com/p/omnifaces</url>
 	<organization>
