--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 
 	<groupId>org.omnifaces</groupId>
 	<artifactId>omnifaces</artifactId>
-	<version>1.8.1</version>
+	<version>2.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>Omnifaces</name>
-	<description>JSF 2.x utility library</description>
+	<description>JSF 2.2+ utility library</description>
 	
 	<url>http://omnifaces.org</url>
 	<organization>
@@ -39,8 +39,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<javase.version>1.6</javase.version>
-		<javaee.version>6.0</javaee.version>
+		<javase.version>1.7</javase.version>
+		<javaee.version>7.0</javaee.version>
 	</properties>
 
 	<developers>
