Add OSS snapshot parent.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 		</license>
 	</licenses>
 
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>7</version>
+	</parent>
+
 	<scm>
 		<url>https://github.com/omnifaces/omnifaces</url>
 		<connection>scm:git:git://github.com/omnifaces/omnifaces.git</connection>
