Upgraded javadoc generator to use Java 8 javadoc. Fixed all javadoc errors/warnings shown by Java 8 javadoc.
Conflicts:
	javadoc.xml
	src/main/java/org/omnifaces/cdi/BeanStorage.java
	src/main/java/org/omnifaces/cdi/Eager.java
	src/main/java/org/omnifaces/cdi/Param.java
	src/main/java/org/omnifaces/cdi/param/Attribute.java
	src/main/java/org/omnifaces/cdi/viewscope/ViewScopeManager.java
	src/main/java/org/omnifaces/component/output/Cache.java
	src/main/java/org/omnifaces/config/BeanManager.java
	src/main/java/org/omnifaces/el/functions/Converters.java
	src/main/java/org/omnifaces/facesviews/FacesViews.java
	src/main/java/org/omnifaces/facesviews/package-info.java
	src/main/java/org/omnifaces/taghandler/DeferredTagHandlerHelper.java
	src/main/java/org/omnifaces/util/Beans.java
	src/main/java/org/omnifaces/util/Components.java
	src/main/java/org/omnifaces/util/FacesLocal.java
	src/main/java/org/omnifaces/util/JNDI.java
	src/main/java/org/omnifaces/util/Utils.java
	src/main/java/org/omnifaces/validator/RequiredCheckboxValidator.java

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>org.omnifaces</groupId>
 	<artifactId>omnifaces</artifactId>
-	<version>1.11-SNAPSHOT</version>
+	<version>1.11-M1</version>
 	<packaging>jar</packaging>
 	
 	<name>OmniFaces</name>
@@ -132,6 +132,30 @@
 				</executions>
 			</plugin>
 
+			<!-- Configure the jar with the javadoc (or rather, convince Maven that we want javadoc at all) -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.10.1</version>
+				<configuration>
+					<javadocVersion>1.8</javadocVersion>
+					<notimestamp>true</notimestamp>
+					<splitindex>true</splitindex>
+					<doctitle>OmniFaces API documentation</doctitle>
+					<links>
+						<link>https://docs.oracle.com/javaee/6/api/</link>
+					</links>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
 			<!-- Deploying is done via sonatype's Nexus  
 			
 				 Snapshot deploy: mvn clean deploy
