--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>org.omnifaces</groupId>
 	<artifactId>omnifaces</artifactId>
-	<version>1.8.1</version>
+	<version>1.10-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<name>Omnifaces</name>
