Configured Javadoc to link to the Java EE 7 API

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,9 @@
 				<version>2.10.1</version>
 				<configuration>
 					<javadocVersion>1.8</javadocVersion>
+					<links>
+						<link>https://docs.oracle.com/javaee/7/api/</link>
+					</links>
 				</configuration>
 				<executions>
 					<execution>
