Prepare 1.8.2-SNAPSHOT (and Eclipse insisted in changing those project files, just leave it for now)

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,10 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
