--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<artifactId>omnifaces</artifactId>
 	<packaging>jar</packaging>
 	<name>Omnifaces</name>
-	<version>1.8.1</version>
+	<version>1.8.2-SNAPSHOT</version>
 	<description>JSF 2.x utility library</description>
 	<url>http://omnifaces.org</url>
 	<organization>
